# blackbox

./: .gitlab-ci.yml  CHANGELOG.md  com.raggesilver.BlackBox.Devel.json  com.raggesilver.BlackBox.json  meson.build
data/: com.raggesilver.BlackBox.appdata.xml.in  com.raggesilver.BlackBox.desktop.in.in  com.raggesilver.BlackBox.gschema.xml  meson.build
data/icons/: meson.build
src/: Application.vala  blackbox.gresource.xml  config.vala.in  meson.build
src/gtk/: preferences-window.ui
src/resources/: style.css
src/services/: Shortcuts.vala
src/utils/: Reactive.vala  Terminal.vala  meson.build
src/widgets/: PreferencesWindow.vala  ShortcutDialog.vala  ShortcutEditor.vala  Terminal.vala  Window.vala  meson.build
toolbox/: main.c
